--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,7 @@
 global.params.p1 =88
 global.params.p2 =55
+spring.h2.console.enabled=true
+spring.cloud.discovery.enabled=true
+spring.cloud.config.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
